package com.codingshuttle.razorpay.payment.entity;

import com.codingshuttle.razorpay.common.entity.Money;
import com.codingshuttle.razorpay.common.enums.OrderStatus;
import jakarta.persistence.*;
import org.hibernate.annotations.JdbcType;
import org.hibernate.annotations.JdbcTypeCode;
import org.hibernate.type.SqlTypes;

import java.time.LocalDateTime;
import java.util.Map;
import java.util.Objects;
import java.util.UUID;

@Entity
@Table(name = "order_record")
public class OrderRecord {
    @Id
    @GeneratedValue(strategy = jakarta.persistence.GenerationType.UUID)
    private UUID id;

    @Column(name = "merchant_id", nullable = false)
    private UUID merchantId;

    // The order ID is a unique identifier for the order, which is generated by the system when the order is created. It is used to track and manage the order throughout its lifecycle.
    //what is Embedded in JPA? In JPA, the @Embedded annotation is used to indicate that a class is a value type and its fields should be mapped to columns in the owning entity's table. This allows for better organization of related fields and promotes code reusability.
    @Embedded
    private Money amount;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 20)
    private OrderStatus orderStatus;

    @Column(nullable = false)
    private Integer attempts = 0;

    /*
        The columnDefinition attribute is set to "jsonb" to indicate that the column should be of type JSONB in the database. This allows for efficient storage and querying of JSON data.
        The @JdbcTypeCode annotation is used to specify the JDBC type code for the notes field. In this case, it is set to SqlTypes.JSON, which indicates that the field should be treated as a JSON type when interacting with the database.
        The notes field itself is defined as a Map<String, Object>, which allows for storing arbitrary key-value pairs in JSON format. This can be useful for storing additional metadata or custom information related to the order.
     */
    @Column(columnDefinition = "jsonb")
    @JdbcTypeCode((SqlTypes.JSON))
    private Map<String, Object> notes;

    @Column(nullable = false)
    private LocalDateTime expriresAt;

}
